# Simple-E-commerce-Django

./: db.sqlite3  pyproject.toml
account/: views.py
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cart_product.py  0003_alter_cart_user.py  0004_rename_amount_item.py  0005_item_created_at_item_updated_at.py  0006_rename_amount_item_quantity.py  0007_item_unique_cart.py
index/: urls.py  views.py
index/templatetags/: app_tags.py
order/: admin.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_remove_order_payment_method_order_bill_amount.py  0003_alter_order_payment_status.py  0004_alter_order_bill_amount_alter_order_paid_amount.py  0005_alter_order_transaction_id.py
product/: admin.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_product_stock_amount.py  0003_alter_product_min_order_amount.py
settings/: settings.py  urls.py
static/css/: card.css  style.css
templates/: base.html
templates/accounts/: register.html
templates/cart/: cart.html
templates/dashboard/: userdash.html
templates/listings/: listings.html  search.html
templates/order/: order.html  orderDetails.html
templates/pages/: index.html
templates/partials/: _footer.html  _navbar.html  _topbar.html
templates/payment/: complete.html
tests/: test_ecom.py
